dataset1235/2025-2/2947369575/users/2826236660/executions/3873599344_291286518.log
== RUN (2025-08-25 22:32:55)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:38:41)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 22:48:01)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:36:17)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("5678:"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
5678:256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
5678:1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678:5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
5678:444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
5678:11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:28:04)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input(38:"))

# Impressao do dobro do numero
print()
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
-- ERROR:
File "XXXX", line 4
    num = int(input(38:"))
                       ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
-- ERROR:
File "XXXX", line 4
    num = int(input(38:"))
                       ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
-- ERROR:
File "XXXX", line 4
    num = int(input(38:"))
                       ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 4:
---- input:
444
---- correct output:
888
-- ERROR:
File "XXXX", line 4
    num = int(input(38:"))
                       ^
SyntaxError: unterminated string literal (detected at line 4)
-- TEST CASE 5:
---- input:
11
---- correct output:
22
-- ERROR:
File "XXXX", line 4
    num = int(input(38:"))
                       ^
SyntaxError: unterminated string literal (detected at line 4)
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:38:08)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:36:24)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("5678:"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
5678:256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
5678:1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678:5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
5678:444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
5678:11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 23:00:12)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-20 23:35:44)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("5678:"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
5678:256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
5678:1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678:5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
5678:444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
5678:11
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:36:26)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("5678:"))

# Impressao do dobro do numero
print(num)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
5678:256
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
5678:1234
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
5678:5678
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
5678:444
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
5678:11
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-20 23:38:14)
-- CODE: 
# Use este codigo como ponto de partida

# Leitura de valores de entrada e conversao para inteiro
num = int(input("Digite o numero:"))

# Impressao do dobro do numero
print(num*2)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
256
---- correct output:
512
---- user output:
Digite o numero:512
-- TEST CASE 2:
---- input:
1234
---- correct output:
2468
---- user output:
Digite o numero:2468
-- TEST CASE 3:
---- input:
5678
---- correct output:
11356
---- user output:
Digite o numero:11356
-- TEST CASE 4:
---- input:
444
---- correct output:
888
---- user output:
Digite o numero:888
-- TEST CASE 5:
---- input:
11
---- correct output:
22
---- user output:
Digite o numero:22
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
